src/objects/CTCAECodeMaster__c.object
<CustomObject>
    <fields>
        <fullName>Code_Type__c</fullName>
        <label>Code Type</label>
        <picklist>
            <picklistValues>
                <fullName>SNOMED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOINC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTCAE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Symptom_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Symptom Master</label>
        <referenceTo>SymptomMaster__c</referenceTo>
        <relationshipName>CTCAEMaster</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Toxicity_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Toxicity Master</label>
        <referenceTo>Toxicity_Master__c</referenceTo>
        <relationshipName>CTCAEMaster</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CTCAECodeMaster</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>CTCAEMaster Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CTCAECodeMaster</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>